--- a/index.html
+++ b/index.html
@@ -5,8 +5,71 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 	<!-- jquery -->
-	<script src="//assets.artistcontrolbox.com/js/jquery-1.10.2.min.js"></script>
-  <script src="//assets.artistcontrolbox.com/js/url.min.js"></script>
+	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+  	<!--<script src="//assets.artistcontrolbox.com/js/url.min.js"></script>-->
+  	<script src="//assets.artistcontrolbox.com/js/moment.min.js"></script>
+  	<script src="//assets.artistcontrolbox.com/js/jquery.timeago.js"></script>
+
+  	<script>
+		// asynchronously load youtube iframe API
+		var tag = document.createElement('script');
+
+		tag.src = "https://www.youtube.com/iframe_api";
+		var firstScriptTag = document.getElementsByTagName('script')[0];
+		firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
+
+		jQuery.timeago.settings.allowFuture = true;
+
+		var player;
+		function onYouTubeIframeAPIReady() {
+
+            player = new YT.Player('video', {
+              height: '390',
+              width: '640',
+              videoId: $('#video').attr('data-video-id'),
+              events: {
+                'onReady': onPlayerReady,
+                'onStateChange': onPlayerStateChange
+              }
+            });
+		}
+
+		function onPlayerReady(event) {
+			player = event.target;
+			player.playVideo();
+			player.mute();
+
+			if(player.isMuted()){
+      			$('#mute').html('mute');
+      			player.unMute();
+      		} else {
+      			$('#mute').html('unmute');
+      			player.mute();
+      		}
+		}
+
+		//var done = false;
+		function onPlayerStateChange(event) {
+        	//console.log(event);
+      	}
+
+      	$(document).ready(function(){
+
+			$('#mute').click(function(){
+				if(player.isMuted()){
+	      			$('#mute').html('mute');
+	      			player.unMute();
+	      		} else {
+	      			$('#mute').html('unmute');
+	      			player.mute();
+	      		}
+			});
+
+      	});
+
+      	
+
+	</script>
 
 	<!-- bootstrap -->
 	<link rel="stylesheet" href="//assets.artistcontrolbox.com/bootstrap-3.0.2/css/bootstrap.min.css">
@@ -20,17 +83,36 @@
 	<!-- app -->
 	<script src="js/app.js"></script>
 	<script src="js/controllers.js"></script>
-  <link rel="stylesheet" href="css/site.css">
+  	<link rel="stylesheet" href="css/site.css">
 
-  <!-- google font -->
-  <!--<link href='http://fonts.googleapis.com/css?family=Bigelow+Rules' rel='stylesheet' type='text/css'>-->
+	<!-- google font -->
+	<!--<link href='http://fonts.googleapis.com/css?family=Bigelow+Rules' rel='stylesheet' type='text/css'>-->
 </head>
 <body>
- 
 
-<header>15m.in</header>
-<div ng-view class="container"></div>
+<nav class="navbar navbar-default" role="navigation">
+	<!-- Brand and toggle get grouped for better mobile display -->
+	<div class="navbar-header">
+	    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+			<span class="sr-only">Toggle navigation</span>
+			<span class="icon-bar"></span>
+			<span class="icon-bar"></span>
+			<span class="icon-bar"></span>
+	    </button>
+    	<a class="navbar-brand" href="#">Brand</a>
+	</div>
+	<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+		<ul class="nav navbar-nav navbar-right">
+      		<li><a id="countdown" class="timeago"></a></li>
+      	</ul>
+	</div>
+</nav>  
 
- 
+<div class="container">
+	<div ng-view></div>
+	<br />
+	<a class="btn btn-primary" id="mute">unmute</a><br />
+<div>
+
 </body>
 </html>
